--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -24,9 +25,9 @@
         </section>
     </header>
     <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button>Замовити послугу</button>
+        <section class="section"></section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button>Замовити послугу</button>
         </section>
         <section>
             <h2>Що є в нашій роботі</h2>
@@ -65,7 +66,7 @@
         </section>
         <section>
             <h2>Наша команда</h2>
-            <ul>
+            <ul class="workers">
                 <li>
                     <img src="./images/img-4.jpg" alt="Ігор">
                     <p>Ігор Дем'яненко</p>
@@ -93,10 +94,10 @@
         <a href="/">Webstudio</a>
         <p>Усі права захищені&copy;</p>
         <address>
-            <ul>
-                <li> <a href=""> Facebook</a></li>
-                <li><a href="">Twitter</a></li>
-                <li> <a href="">Instagram</a></li>
+            <ul></ul>
+            <li> <a href=""> Facebook</a></li>
+            <li><a href="">Twitter</a></li>
+            <li> <a href="">Instagram</a></li>
             </ul>
         </address>
         <ul>
