--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         </section>
     </header>
     <main>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <section class="section"></section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button>Замовити послугу</button>
