--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Webstudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -16,9 +17,9 @@
         <a href="/">Webstudio</a>
         <nav>
             <ul>
-                <li><a href="/">Студія</a></li>
-                <li><a href="/">Портфоліо</a></li>
-                <li><a href="/">Контакти</a></li>
+                <li><a href="./">Студія</a></li>
+                <li><a href="./">Портфоліо</a></li>
+                <li><a href="./">Контакти</a></li>
             </ul>
         </nav>
         <section>
@@ -98,9 +99,9 @@
         <p>Усі права захищені&copy;</p>
         <address>
             <ul></ul>
-            <li> <a href=""> Facebook</a></li>
-            <li><a href="">Twitter</a></li>
-            <li> <a href="">Instagram</a></li>
+            <li> <a href="./"> Facebook</a></li>
+            <li><a href="./">Twitter</a></li>
+            <li> <a href="./">Instagram</a></li>
             </ul>
         </address>
         <ul>
