--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap"
@@ -13,57 +14,63 @@
 </head>
 
 <body>
-    <header>
-        <a href="/">Webstudio</a>
-        <nav>
-            <ul>
-                <li><a href="./">Студія</a></li>
-                <li><a href="./">Портфоліо</a></li>
-                <li><a href="./">Контакти</a></li>
-            </ul>
-        </nav>
-        <section>
-            <h2>Інформація</h2>
-            <a href="mspeg336@gmail.com" target="_blank" rel="noreferrer noopener">mspeg336@gmail.com</a>
-            <p>+380683193617</p>
-        </section>
+    <header class="header">
+        <div class="header-conteiner">
+            <a href="/">Webstudio</a>
+            <nav class="header-conteiner-nav">
+                <ul class="mainlist">
+                    <li class="mainlist-sites"><a href="./">Студія</a></li>
+                    <li class="mainlist-sites"><a href="./">Портфоліо</a></li>
+                    <li class="mainlist-sites"><a href="./">Контакти</a></li>
+                </ul>
+            </nav>
+            <section class="information">
+                <h2>Інформація</h2>
+                <a href="mspeg336@gmail.com" target="_blank" rel="noreferrer noopener">mspeg336@gmail.com</a>
+                <p>+380683193616</p>
+            </section>
+        </div>
+
     </header>
-    <main>
-        <section class="section"></section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button>Замовити послугу</button>
+    <main class="main">
+        <section class="hero">
+            <div class="conteiner">
+                <section class="section">
+                    <h1>Ефективні рішення для вашого бізнесу</h1>
+                    <button>Замовити послугу</button>
+                </section>
+        </section>
+        </div class="ourwork">
+        <h2>Що є в нашій роботі</h2>
+        <ul>
+            <li>
+                <h3 class="ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
+                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            </li>
+            <li>
+                <h3 class="ourwork-punktualnist">ПУНКТУАЛЬНІСТЬ</h3>
+                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li>
+                <h3 class="ourwork-planning">ПЛАНУВАННЯ</h3>
+                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li>
+                <h3 class="ourwork-newtech">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
+        </ul>
         </section>
         <section>
-            <h2>Що є в нашій роботі</h2>
+            <h3 class="ourjob">Чим ми займаємося</h3>
             <ul>
-                <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                </li>
-                <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                </li>
-                <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h3>Чим ми займаємося</h3>
-            <ul>
-                <li>
+                <li class="ourjob-programing">
                     <img src="./images/img.jpg" alt="програмування">
                 </li>
-                <li>
+                <li class="ourjob-dezain">
                     <img src="./images/img-2.jpg" alt="дизайн">
                 </li>
-                <li>
+                <li class="ourjob-oformlena">
                     <img src="./images/img-3.jpg" alt="оформлення">
                 </li>
             </ul>
@@ -71,22 +78,22 @@
         <section>
             <h2>Наша команда</h2>
             <ul class="workers">
-                <li>
+                <li class="workers-igor">
                     <img src="./images/img-4.jpg" alt="Ігор">
                     <p>Ігор Дем'яненко</p>
                     <h3>Product Designer</h3>
                 </li>
-                <li>
+                <li class="workers-olga">
                     <img src="./images/img-5.jpg" alt="Ольга">
                     <p>Ольга Рєпіна</p>
                     <h3>Frontend Developer</h3>
                 </li>
-                <li>
+                <li class="workers-mykola">
                     <img src="./images/img-6.jpg" alt="Микола">
                     <p>Микола Тарасов</p>
                     <h3>Marketing</h3>
                 </li>
-                <li>
+                <li class="workers-mykhailo">
                     <img src="./images/img-7.jpg" alt="Михайло">
                     <p>Михайло Єрмаков</p>
                     <h3>UI Designer</h3>
@@ -94,10 +101,10 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <a href="/">Webstudio</a>
         <p>Усі права захищені&copy;</p>
-        <address>
+        <address class="footer-address">
             <ul></ul>
             <li> <a href="./"> Facebook</a></li>
             <li><a href="./">Twitter</a></li>
@@ -112,7 +119,7 @@
                 <a href="mspeg336@gmail.com" target="_blank" rel="noreferrer noopener">mspeg336@gmail.com</a>
             </li>
             <li>
-                <p>+380683193617</p>
+                <p>+380683193616</p>
             </li>
 
 
