--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a href="/">Webstudio</a>
             <nav class="header-conteiner-nav">
                 <ul class="mainlist">
-                    <li class="mainlist-sites"><a href="./">Студія</a></li>
-                    <li class="mainlist-sites"><a href="./">Портфоліо</a></li>
+                    <li class="mainlist-sites"><a href="./index.html">Студія</a></li>
+                    <li class="mainlist-sites"><a href="./portfolio.html">Портфоліо</a></li>
                     <li class="mainlist-sites"><a href="./">Контакти</a></li>
                 </ul>
             </nav>
@@ -121,10 +121,6 @@
             <li>
                 <p>+380683193616</p>
             </li>
-
-
-
-
         </ul>
     </footer>
 </body>
