--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
 <body>
     <header class="header">
         <div class="header-conteiner">
-            <a href="/">Webstudio</a>
+            <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
             <nav class="header-conteiner-nav">
-                <ul class="mainlist">
-                    <li class="mainlist-sites"><a href="./index.html">Студія</a></li>
-                    <li class="mainlist-sites"><a href="./portfolio.html">Портфоліо</a></li>
-                    <li class="mainlist-sites"><a href="./">Контакти</a></li>
+                <ul class="header-mainlist">
+                    <li class="header-mainlist-sites"><a class="header-link active-link" href="./index.html">Студія</a>
+                    </li>
+                    <li class="header-mainlist-sites"><a class="header-link" href="./portfolio.html">Портфоліо</a></li>
+                    <li class="header-mainlist-sites"><a class="header-link" href="./">Контакти</a></li>
                 </ul>
             </nav>
-            <section class="information">
-                <h2>Інформація</h2>
-                <a href="mspeg336@gmail.com" target="_blank" rel="noreferrer noopener">mspeg336@gmail.com</a>
-                <p>+380683193616</p>
-            </section>
+            <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
+            <p>+38 096 111 11 11</p>
         </div>
 
     </header>
@@ -36,90 +34,81 @@
         <section class="hero">
             <div class="conteiner">
                 <section class="section">
-                    <h1>Ефективні рішення для вашого бізнесу</h1>
-                    <button>Замовити послугу</button>
+                    <h1 class="section-h1">Ефективні рішення для вашого бізнесу</h1>
+                    <button class="button" type="button">Замовити послугу</button>
                 </section>
+            </div>
+            <ul class="ourwork">
+                <li class="item">
+                    <h3 class="ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="list-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li class="item">
+                    <h3 class="ourwork-atention">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li class="item">
+                    <h3 class="ourwork-atention">ПЛАНУВАННЯ</h3>
+                    <p class="list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li class="item">
+                    <h3 class="ourwork-atention">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="list-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
         </section>
-        </div class="ourwork">
-        <h2>Що є в нашій роботі</h2>
-        <ul>
-            <li>
-                <h3 class="ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-            </li>
-            <li>
-                <h3 class="ourwork-punktualnist">ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-            </li>
-            <li>
-                <h3 class="ourwork-planning">ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-            </li>
-            <li>
-                <h3 class="ourwork-newtech">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-            </li>
-        </ul>
-        </section>
-        <section>
-            <h3 class="ourjob">Чим ми займаємося</h3>
-            <ul>
-                <li class="ourjob-programing">
+        <section class="images">
+            <h3 class="images-ourjob">Чим ми займаємося</h3>
+            <ul class="list">
+                <li class="item">
                     <img src="./images/img.jpg" alt="програмування">
                 </li>
-                <li class="ourjob-dezain">
+                <li class="item">
                     <img src="./images/img-2.jpg" alt="дизайн">
                 </li>
-                <li class="ourjob-oformlena">
+                <li class="item">
                     <img src="./images/img-3.jpg" alt="оформлення">
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul class="workers">
-                <li class="workers-igor">
-                    <img src="./images/img-4.jpg" alt="Ігор">
+        <section class="workers">
+            <h2 class="workers-h2">Наша команда</h2>
+            <ul class="list">
+                <li class="workers-h2-item">
+                    <img src="./images/img-44.jpg" alt="Ігор">
                     <p>Ігор Дем'яненко</p>
-                    <h3>Product Designer</h3>
+                    <h3 class="underworkers">Product Designer</h3>
                 </li>
-                <li class="workers-olga">
-                    <img src="./images/img-5.jpg" alt="Ольга">
+                <li class="workers-h2-item">
+                    <img src="./images/img-41.jpg" alt="Ольга">
                     <p>Ольга Рєпіна</p>
-                    <h3>Frontend Developer</h3>
+                    <h3 class="underworkers">Frontend Developer</h3>
                 </li>
-                <li class="workers-mykola">
-                    <img src="./images/img-6.jpg" alt="Микола">
+                <li class="workers-h2-item">
+                    <img src="./images/img-22.jpg" alt="Микола">
                     <p>Микола Тарасов</p>
-                    <h3>Marketing</h3>
+                    <h3 class="underworkers">Marketing</h3>
                 </li>
-                <li class="workers-mykhailo">
-                    <img src="./images/img-7.jpg" alt="Михайло">
+                <li class="workers-h2-item">
+                    <img src="./images/img-33.jpg" alt="Михайло">
                     <p>Михайло Єрмаков</p>
-                    <h3>UI Designer</h3>
+                    <h3 class="underworkers">UI Designer</h3>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="/">Webstudio</a>
+        <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
         <p>Усі права захищені&copy;</p>
-        <address class="footer-address">
-            <ul></ul>
-            <li> <a href="./"> Facebook</a></li>
-            <li><a href="./">Twitter</a></li>
-            <li> <a href="./">Instagram</a></li>
-            </ul>
-        </address>
         <ul>
             <li>
-                <p>м.Мостиська вул.Підкови,6</p>
+                <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
             </li>
             <li>
-                <a href="mspeg336@gmail.com" target="_blank" rel="noreferrer noopener">mspeg336@gmail.com</a>
+                <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
             </li>
             <li>
-                <p>+380683193616</p>
+                <p>+38 096 111 11 11</p>
             </li>
         </ul>
     </footer>
