--- a/portfolio.html
+++ b/portfolio.html
@@ -10,115 +10,108 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/styleport.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header class="header">
         <div class="header-conteiner">
-            <a href="/">Webstudio</a>
+            <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
             <nav class="header-conteiner-nav">
                 <ul class="mainlist">
-                    <li class="mainlist-sites"><a href="./index.html">Студія</a></li>
-                    <li class="mainlist-sites"><a href="./portfolio.html">Портфоліо</a></li>
-                    <li class="mainlist-sites"><a href="./">Контакти</a></li>
+                    <li class="mainlist-sites"><a class="header-link" href="./index.html">Студія</a></li>
+                    <li class="mainlist-sites"><a class="header-link active-link" href="./portfolio.html">Портфоліо</a>
+                    </li>
+                    <li class="mainlist-sites"><a class="header-link" href="./">Контакти</a></li>
                 </ul>
             </nav>
-            <section class="information">
-                <h2>Інформація</h2>
-                <a href="mspeg336@gmail.com" target="_blank" rel="noreferrer noopener">mspeg336@gmail.com</a>
-                <p>+380683193616</p>
-            </section>
+            <ul>
+                <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
+                <p>+38 096 111 11 11</p>
+            </ul>
         </div>
     </header>
     <main>
-        <section>
+        <section class="all">
             <ul class="portfolios">
-                <li>
+                <li class="item">
                     <a href="./">Усі</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="./">Веб-сайти</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="./">Додатки</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="./">Дизайн</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="./">Маркетинг</a>
                 </li>
         </section>
-        <section>
-            <ul>
-                <li>
+        <section class="works">
+            <ul class="list">
+                <li class="item">
                     <img src="./images-portfolio/img.jpg" alt="технокряк">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="nameofsite">Технокряк</h2>
+                    <p class="portfoli">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <h2 class="nameofsite">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfoli">Дизайн</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images-portfolio/img-3.jpg" alt="Ресторан Seafood">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Додаток</p>
+                    <h2 class="nameofsite">Ресторан Seafood</h2>
+                    <p class="portfoli">Додаток</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images-portfolio/img-4.jpg" alt="Проєкт Prime">
-                    <h2>Проєкт Prime</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="nameofsite">Проєкт Prime</h2>
+                    <p class="portfoli">Маркетинг</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images-portfolio/img-5.jpg" alt="Проєкт Boxes">
-                    <h2>Проєкт Boxes</h2>
-                    <p>Додаток</p>
+                    <h2 class="nameofsite">Проєкт Boxes</h2>
+                    <p class="portfoli">Додаток</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images-portfolio/img-6.jpg" alt="Inspiration has no Borders">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="nameofsite">Inspiration has no Borders</h2>
+                    <p class="portfoli">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images-portfolio/img-7.jpg" alt="Видання Limited Edition">
-                    <h2>Видання Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <h2 class="nameofsite">Видання Limited Edition</h2>
+                    <p class="portfoli">Дизайн</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images-portfolio/img-8.jpg" alt="Проєкт LAB">
-                    <h2>Проєкт LAB</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="nameofsite">Проєкт LAB</h2>
+                    <p class="portfoli">Маркетинг</p>
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images-portfolio/img-9.jpg" alt="Growing Business">
-                    <h2>Growing Business</h2>
-                    <p>Додаток</p>
+                    <h2 class="nameofsite">Growing Business</h2>
+                    <p class="portfoli">Додаток</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="/">Webstudio</a>
+        <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
         <p>Усі права захищені&copy;</p>
-        <address class="footer-address">
-            <ul></ul>
-            <li> <a href="./"> Facebook</a></li>
-            <li><a href="./">Twitter</a></li>
-            <li> <a href="./">Instagram</a></li>
-            </ul>
-        </address>
         <ul>
             <li>
-                <p>м.Мостиська вул.Підкови,6</p>
+                <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
             </li>
             <li>
-                <a href="mspeg336@gmail.com" target="_blank" rel="noreferrer noopener">mspeg336@gmail.com</a>
+                <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
             </li>
             <li>
-                <p>+380683193616</p>
+                <p>+38 096 111 11 11</p>
             </li>
         </ul>
     </footer>
