--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header">
-        <div class="header-conteiner">
+        <div class="conteiner">
             <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
             <nav class="header-conteiner-nav">
                 <ul class="header-mainlist">
@@ -37,25 +37,26 @@
                     <h1 class="section-h1">Ефективні рішення для вашого бізнесу</h1>
                     <button class="button" type="button">Замовити послугу</button>
                 </section>
-            </div>
-            <ul class="ourwork">
-                <li class="item">
-                    <h3 class="ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="list-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                </li>
-                <li class="item">
-                    <h3 class="ourwork-atention">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                </li>
-                <li class="item">
-                    <h3 class="ourwork-atention">ПЛАНУВАННЯ</h3>
-                    <p class="list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li class="item">
-                    <h3 class="ourwork-atention">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="list-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
+        </section>
+        </div>
+        <ul class="ourwork">
+            <li class="item">
+                <h3 class="ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
+                <p class="list-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            </li>
+            <li class="item">
+                <h3 class="ourwork-atention">ПУНКТУАЛЬНІСТЬ</h3>
+                <p class="list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li class="item">
+                <h3 class="ourwork-atention">ПЛАНУВАННЯ</h3>
+                <p class="list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li class="item">
+                <h3 class="ourwork-atention">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p class="list-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
+        </ul>
         </section>
         <section class="images">
             <h3 class="images-ourjob">Чим ми займаємося</h3>
@@ -76,22 +77,22 @@
             <ul class="list">
                 <li class="workers-h2-item">
                     <img src="./images/img-44.jpg" alt="Ігор">
-                    <p>Ігор Дем'яненко</p>
+                    <p class="workers-p">Ігор Дем'яненко</p>
                     <h3 class="underworkers">Product Designer</h3>
                 </li>
                 <li class="workers-h2-item">
                     <img src="./images/img-41.jpg" alt="Ольга">
-                    <p>Ольга Рєпіна</p>
+                    <p class="workers-p">Ольга Рєпіна</p>
                     <h3 class="underworkers">Frontend Developer</h3>
                 </li>
                 <li class="workers-h2-item">
                     <img src="./images/img-22.jpg" alt="Микола">
-                    <p>Микола Тарасов</p>
+                    <p class="workers-p">Микола Тарасов</p>
                     <h3 class="underworkers">Marketing</h3>
                 </li>
                 <li class="workers-h2-item">
                     <img src="./images/img-33.jpg" alt="Михайло">
-                    <p>Михайло Єрмаков</p>
+                    <p class="workers-p">Михайло Єрмаков</p>
                     <h3 class="underworkers">UI Designer</h3>
                 </li>
             </ul>
@@ -99,7 +100,6 @@
     </main>
     <footer class="footer">
         <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
-        <p>Усі права захищені&copy;</p>
         <ul>
             <li>
                 <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
