--- a/portfolio.html
+++ b/portfolio.html
@@ -7,22 +7,22 @@
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header class="header">
-        <div class="header-conteiner">
+        <div class="conteiner">
             <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
-            <nav class="header-conteiner-nav">
-                <ul class="mainlist">
-                    <li class="mainlist-sites"><a class="header-link" href="./index.html">Студія</a></li>
-                    <li class="mainlist-sites"><a class="header-link active-link" href="./portfolio.html">Портфоліо</a>
+            <nav class="conteiner-nav">
+                <ul class="header-list">
+                    <li class="header-list-item"><a class="header-link" href="./index.html">Студія</a></li>
+                    <li class="header-list-item"><a class="header-link active-link"
+                            href="./portfolio.html">Портфоліо</a>
                     </li>
-                    <li class="mainlist-sites"><a class="header-link" href="./">Контакти</a></li>
+                    <li class="header-list-item"><a class="header-link" href="./">Контакти</a></li>
                 </ul>
             </nav>
             <ul>
@@ -102,7 +102,6 @@
     </main>
     <footer class="footer">
         <a class="logo" href="/">Web<span class="logoblack">Studio</span></a>
-        <p>Усі права захищені&copy;</p>
         <ul>
             <li>
                 <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
