--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul class="list">
                 <li class="item"><a class="gmail" href="//">info@devstudio.com</a></li>
                 <li class="item">
-                    <p>+38 096 111 11 11</p>
+                    <a class="phone-number" href="///">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -118,10 +118,11 @@
                         <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
                     </li>
                     <li class="item">
-                        <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
+                        <a class="footer-link" href="/." target="_blank"
+                            rel="noreferrer noopener">info@devstudio.com</a>
                     </li>
                     <li class="item">
-                        <p>+38 096 111 11 11</p>
+                        <a class="footer-phone-number" href="///">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
