--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
                 <ul class="list">
                     <li class="item"><a class="gmail" href="//">info@devstudio.com</a></li>
                     <li class="item">
-                        <p>+38 096 111 11 11</p>
+                        <a class="phone-number" href="///">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +38,7 @@
         <section class="all">
             <ul class="portfolios">
                 <li class="item">
-                    <a href="./">Усі</a>
+                    <a class="active-link" href="./">Усі</a>
                 </li>
                 <li class="item">
                     <a href="./">Веб-сайти</a>
@@ -57,48 +57,48 @@
             <ul class="list">
                 <li class="item">
                     <img src="./images-portfolio/img.jpg" alt="технокряк">
-                    <h2 class="nameofsite">Технокряк</h2>
-                    <p class="portfoli">Веб-сайт</p>
+                    <h2 class="item-nameofsite">Технокряк</h2>
+                    <p class="item-nameofsite-portfoli">Веб-сайт</p>
                 </li>
                 <li class="item">
                     <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
-                    <h2 class="nameofsite">Постер New Orlean vs Golden Star</h2>
-                    <p class="portfoli">Дизайн</p>
+                    <h2 class="item-nameofsite">Постер New Orlean vs Golden Star</h2>
+                    <p class="item-nameofsite-portfoli">Дизайн</p>
                 </li>
                 <li class="item">
                     <img src="./images-portfolio/img-3.jpg" alt="Ресторан Seafood">
-                    <h2 class="nameofsite">Ресторан Seafood</h2>
-                    <p class="portfoli">Додаток</p>
+                    <h2 class="item-nameofsite">Ресторан Seafood</h2>
+                    <p class="item-nameofsite-portfoli">Додаток</p>
                 </li>
                 <li class="item">
                     <img src="./images-portfolio/img-4.jpg" alt="Проєкт Prime">
-                    <h2 class="nameofsite">Проєкт Prime</h2>
-                    <p class="portfoli">Маркетинг</p>
+                    <h2 class="item-nameofsite">Проєкт Prime</h2>
+                    <p class="item-nameofsite-portfoli">Маркетинг</p>
                 </li>
                 <li class="item">
                     <img src="./images-portfolio/img-5.jpg" alt="Проєкт Boxes">
-                    <h2 class="nameofsite">Проєкт Boxes</h2>
-                    <p class="portfoli">Додаток</p>
+                    <h2 class="item-nameofsite">Проєкт Boxes</h2>
+                    <p class="item-nameofsite-portfoli">Додаток</p>
                 </li>
                 <li class="item">
                     <img src="./images-portfolio/img-6.jpg" alt="Inspiration has no Borders">
-                    <h2 class="nameofsite">Inspiration has no Borders</h2>
-                    <p class="portfoli">Веб-сайт</p>
+                    <h2 class="item-nameofsite">Inspiration has no Borders</h2>
+                    <p class="item-nameofsite-portfoli">Веб-сайт</p>
                 </li>
                 <li class="item">
                     <img src="./images-portfolio/img-7.jpg" alt="Видання Limited Edition">
-                    <h2 class="nameofsite">Видання Limited Edition</h2>
-                    <p class="portfoli">Дизайн</p>
+                    <h2 class="item-nameofsite">Видання Limited Edition</h2>
+                    <p class="item-nameofsite-portfoli">Дизайн</p>
                 </li>
                 <li class="item">
                     <img src="./images-portfolio/img-8.jpg" alt="Проєкт LAB">
-                    <h2 class="nameofsite">Проєкт LAB</h2>
-                    <p class="portfoli">Маркетинг</p>
+                    <h2 class="item-nameofsite">Проєкт LAB</h2>
+                    <p class="item-nameofsite-portfoli">Маркетинг</p>
                 </li>
                 <li class="item">
                     <img src="./images-portfolio/img-9.jpg" alt="Growing Business">
-                    <h2 class="nameofsite">Growing Business</h2>
-                    <p class="portfoli">Додаток</p>
+                    <h2 class="item-nameofsite">Growing Business</h2>
+                    <p class="item-nameofsite-portfoli">Додаток</p>
                 </li>
             </ul>
         </section>
@@ -113,7 +113,7 @@
                 <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
             </li>
             <li>
-                <p>+38 096 111 11 11</p>
+                <a class="phone-number" href="///">+38 096 111 11 11</a>
             </li>
         </ul>
     </footer>
