--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
                 <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
             </li>
             <li>
-                <a href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
+                <a class="footer-link" href="/." target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
             </li>
             <li>
                 <a class="phone-number" href="///">+38 096 111 11 11</a>
