--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
                         <li class="header-list-item"><a class="header-link" href="./">Контакти</a></li>
                     </ul>
                 </nav>
-                <ul class="list">
-                    <li class="item"><a class="gmail" href="./">info@devstudio.com</a></li>
-                    <li class="item">
+                <ul class="header-list">
+                    <li class="header-list-li"><a class="gmail" href="./">info@devstudio.com</a></li>
+                    <li class="header-list-li">
                         <a class="phone-number" href="./">+38 096 111 11 11</a>
                     </li>
                 </ul>
