--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </p>
                     </li>
                     <li class="ourwork-list-ourwurk-item">
-                        <h3 class="ourwork-atention-title">ПУНКТУАЛЬНІСТЬ</h3>
+                        <h3 class="ourwork-title">ПУНКТУАЛЬНІСТЬ</h3>
                         <p class="list-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                         </p>
                     </li>
